--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.vaadin.addons.springsecurityviewprovider</groupId>
 	<artifactId>vaadin-springsecurityviewprovider</artifactId>
-	<version>0.1.2-SNAPSHOT</version>
+	<version>0.2.1</version>
 	<name>Vaadin-SpringSecurityViewProvider</name>
 
 	<prerequisites>
@@ -29,7 +28,8 @@
 	<scm>
 		<connection>scm:git:git@github.com:michael-simons/vaadin-springsecurityviewprovider.git</connection>
 		<developerConnection>scm:git:git@github.com:michael-simons/vaadin-springsecurityviewprovider.git</developerConnection>
-	</scm>
+	  <tag>0.2.1</tag>
+  </scm>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
