[maven-release-plugin] prepare for next development iteration

--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.vaadin.addons.springsecurityviewprovider</groupId>
 	<artifactId>vaadin-springsecurityviewprovider</artifactId>
-	<version>0.2.1</version>
+	<version>0.2.2-SNAPSHOT</version>
 	<name>Vaadin-SpringSecurityViewProvider</name>
 
 	<prerequisites>
@@ -28,7 +28,7 @@
 	<scm>
 		<connection>scm:git:git@github.com:michael-simons/vaadin-springsecurityviewprovider.git</connection>
 		<developerConnection>scm:git:git@github.com:michael-simons/vaadin-springsecurityviewprovider.git</developerConnection>
-	  <tag>0.2.1</tag>
+	  <tag>HEAD</tag>
   </scm>
 
 	<properties>
